[package]
name = "runoff-rs"
version = "0.1.0"
edition = "2021"
authors = ["Angus Gibson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
kd-tree = "0.5.1"
ndarray = "0.15.6"
netcdf = { version = "0.7.0", features = ["static"] }
ordered-float = "3.4.0"
rsparse = "0.2.0"
